<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".course_input">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="19dp"
        android:layout_height="33dp"
        android:layout_marginLeft="362dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/header_menu_3dots"
        android:foreground="@drawable/header_menu_3dots"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:background="@drawable/back"
        android:foreground="@drawable/back2"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="18dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>


    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="65dp"
        android:fontFamily="@font/avenir_regular"
        android:text="@string/add_course"
        android:textColor="@color/white"
        android:textSize="23sp"/>

    <!--here you add the name of the user after they login
        ,(abbreviation with first names only)-->

    <TextView
        android:id="@+id/headerWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="49sp"
        android:shadowColor="#EBE1E1"
        android:shadowDx="6"
        android:shadowDy="8"
        android:shadowRadius="7"
        android:fontFamily="@font/avenir_black"
        android:textColor="@color/white"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="83dp"/>

    <TextView
        android:id="@+id/courseInfo"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="285dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/course_information"
        android:textColor="#BBBBBB"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_anchor="@+id/courseInfo"
        app:layout_anchorGravity="top|center" />

    <TextView
        android:id="@+id/courseCode"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="335dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/course_code"
        android:textColor="#00B9E6"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="335dp"
        android:hint="@string/course_code_hint"
        tools:ignore="TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/semester"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/level"
        android:textColor="#00B9E6"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="400dp"
        android:entries="@array/level_array"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/departmentInfo"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/department_information"
        android:textColor="#BBBBBB"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/courseDepartment"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="520dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/department"
        android:textColor="#00B9E6"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/departmentSpinner"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="520dp"
        android:entries="@array/department_array"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/reserveBtn"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/reserve"
        android:fontFamily="@font/sf_pro"
        android:text="@string/reserve"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/confirmChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="620dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/confirm_reservation"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>