<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="19dp"
        android:layout_height="33dp"
        android:layout_marginLeft="362dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/header_menu_3dots"
        android:foreground="@drawable/header_menu_3dots"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty_dashboard"
        android:textSize="23sp"
        android:fontFamily="@font/avenir_regular"
        android:textColor="@color/white"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="29dp"/>

    <!--here you add the name of the user after they login
        ,(abbreviation with first names only)-->
    <TextView
        android:id="@+id/headerWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="49sp"
        android:shadowColor="#EBE1E1"
        android:shadowDx="6"
        android:shadowDy="8"
        android:shadowRadius="7"
        android:fontFamily="@font/avenir_black"
        android:textColor="@color/white"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="83dp"/>

    <Button
        android:id="@+id/addTest"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:background="@drawable/dash_button_background"
        android:drawableTop="@mipmap/dash_button_foreground"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="330dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:fontFamily="@font/sf_pro"
        android:text="@string/add_test"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/mySchedule"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/dash_button_background"
        android:drawableTop="@mipmap/dash_button2_foreground"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:fontFamily="@font/sf_pro"
        android:text="@string/my_schedule"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/addCourse"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="539dp"
        android:text="@string/add_course"
        android:textAllCaps="false"
        android:shadowColor="#FFFFFF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:fontFamily="@font/sf_pro"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/dash_button_background"
        android:drawableTop="@mipmap/dash_button3_foreground"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>